Adding extra map, merging @NyoTheNeko s stuff

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -60,16 +60,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Verifying we have the right version\n",
-    "folium.__version__ == '0.5.0'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,7 +76,7 @@
     "\n",
     "Secondly, seeing as the idea is to compare the unemployment rate of Europe to that of Switzerland, it would be more appropriate to take the data by country rather than that per NUTS 2 region, even more so seeing as Switzerland is cut in several in that dataset. So, to be able to compare it to Switzerland as a whole, we should have Switzerland as only one entity.\n",
     "\n",
-    "Therefore, we also need data that includes Switzerland, as it is not always the case for all files about unemployment in Europe. Thus, we had to dig a bit deeper and find data on unemployment according to age, sex and nationality (which contains rates for Switzerland, compared to data in the main indicators), which restricts it to people of age 15 to 74. This is actually what we want as those are the \"adults\" that could be potentially working already, and people that are younger or older should not count in our rates, as they aren't aprt of the working force.\n",
+    "Therefore, we also need data that includes Switzerland, as it is not always the case for all files about unemployment in Europe. Thus, we had to dig a bit deeper and find data on unemployment according to age, sex and nationality (which contains rates for Switzerland, compared to data in the main indicators), which restricts it to people of age 15 to 74. This is actually what we want as those are the \"adults\" that could be potentially working already, and people that are younger or older should not count in our rates, as they aren't part of the working force.\n",
     "\n",
     "Note that we also choose to delete all the columns we do not need (years other than 2016) and the data for the UE as a whole, which were the 4 first rows, on the website –before downloading the data."
    ]
@@ -213,18 +203,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, for the countries we have no data on, the color that was chosen as default is a a vivid red. It is thus easy to see that the countries we have no information about are those not in the UE or in Schengen."
+    "As we can see, for the countries we have no data on, the color that was chosen as default is an eggshell white. It is thus easy to see that the countries we have no information about are those not in the UE or in Schengen (Russia, Belarus, Bosnia, ...).\n",
+    "\n",
+    "We also choose to change the Threshold so that we can easily see the rates that are different from Switzerland (lower mostly)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the difference in unemployment rates between Switzerland and a lot of it's neighboring countries (Germany, Austria, Poland, and so on) is basically the same, but it fares a lot better than two of it's direct neighbors: France and Italy. \n",
+    "Here we can see that Switzerland farers a lot better than most of it's neighboring countries except for Germany (and the Czech Republic) which has a lower rate. Iceland seems to be pretty well off too. Switzerland also has the same rates as the United Kingdom, Norway or Hungary.  \n",
     "\n",
     "Thus, in terms of unemployment, Switzerland is one of the copuntries with the lowest rate, but not the only one to fare so well.\n",
     "\n",
-    "It is also important to note that the colors are a little bit misleading because of the way that choropleth maps reduce the threshold. Thus, we have any country with rating between 3 and 6 that has the same color as Switzerland. Seeing as the rate in Switzerland is 5%, this means that any country with less would have the same color, yet still fare better than Switzerland (which is a case for Germany or Iceland)."
+    "It is also important to note that, even with us changing the threshold, the colors are a little bit misleading because of the way that choropleth maps reduce the threshold to six numbers. Thus, we have any country with rating between 8 and 13 that have the same color, while also having the same color for countries between ratings 5 and 6, which is a much smaller step."
    ]
   },
   {
@@ -332,7 +324,7 @@
    "source": [
     "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
     "swiss_unemployment.insert(1, 'Code', swiss_unemployment['Canton'].map(dico))\n",
-    "swiss_unemployment"
+    "swiss_unemployment.head()"
    ]
   },
   {
@@ -554,8 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We calculate different measures to look at the difference between unemploment between two groups.\n",
-    "The difference (scaled by the sume of both unemploment rates) and the rate both show different trends.\n",
+    "We calculate different measures to look at the difference between unemploment between two groups. The difference (scaled by the sum of both unemploment rates) and the rate both show different trends.\n",
     "\n",
     "The ratio gives us how many times higher the unemployment rate for foreigners is compared to swiss people.\n",
     "The difference / total rate gives us the difference taking into consideration how high unemployment is in general in that canton."
@@ -613,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we highlight the places where, the difference relative to total unemployment is big. This is an attempt to take absolute value of unemployment into consideration. It is very hard to draw conclusions for this are we are already working with percentages."
+    "Here we highlight the places where, the difference relative to total unemployment is big. This is an attempt to take absolute value of unemployment into consideration. It is very hard to draw conclusions for this as we are already working with percentages."
    ]
   },
   {
@@ -645,11 +636,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Getting this dataset was more involved, as one had to select the correct links to be able to get the data by age and nationality at the same time.\n",
+    "Getting this dataset was harder, as one had to select the correct links to be able to get the data by age and nationality at the same time.\n",
     "\n",
     "Here we show the path we used:\n",
     "We had to click on monthly reports, and then get the unemploment rate by different categories.\n",
-    "By using this path we get complete controll over what data we want."
+    "By using this path we get complete control over what data we want."
    ]
   },
   {
@@ -674,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now read the data into a dataframe. Note that for some cantones, some values are not present, and makrked by '...'. We transform these values into NaN as to more easly handle them."
+    "We now read the data into a dataframe. Note that for some cantons, some values are not present, and marked by '...'. We transform these values into NaN as to be able to more easly handle them."
    ]
   },
   {
@@ -715,9 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#renaming columns for convenience\n",
@@ -740,8 +729,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the exercise we are asked to draw a bar plot. We found that adding even with the bar plot it is quite hard to get a good overview of the data. In our first attempt we plot two barplots.\n",
-    "We found that using the Canton as the x axis gives the most redable charts, as otherwise the Cantons are color coded."
+    "In the exercise we are asked to draw a bar plot. We found that, even with a bar plot, it is quite hard to get a good overview of the data. In our first attempt we plot two different barplots.\n",
+    "We found that using the Canton as the x axis gives the most readable charts, as otherwise the Cantons are color coded."
    ]
   },
   {
@@ -800,16 +789,83 @@
    "source": [
     "We again observe that a lot of elderly foreigners are more unemployed. \n",
     "For both groups young people have the highest unemployment rate.\n",
-    "In some cantons younger people suffer much higher rates of unemployment.\n",
-    "\n",
-    "#We should check if this coincides with foreigners and swiss nationals."
+    "In some cantons younger people suffer much higher rates of unemployment."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finaly we decide to also show the distribution over all cantons using boxplots, this gives a better overview without looking at Cantons individualy."
+    "In an other attempt to better visualize this, we use the ratio instead. \n",
+    "Next you will find the manipulations necessary to calculate the ration for all age."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pivot df for easier manipulation\n",
+    "pivoted_unemployment = pd.pivot_table(data=swiss_unemployed_age, values='Unemployment rate',\n",
+    "               columns=['Nationalité', 'Age class: 15-24, 25-49, 50 ans and up'], \n",
+    "               dropna=False,\n",
+    "               index = 'index'\n",
+    "              ).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preform division\n",
+    "suisses = pivoted_unemployment['Suisses']\n",
+    "etrangers = pivoted_unemployment['Etrangers']\n",
+    "barplot = etrangers.divide(suisses)\n",
+    "barplot['Code'] = swiss_foreign_unemployed['Code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#un-pivot colummn (easier for visualisation)\n",
+    "barplot = barplot.melt(id_vars='Code')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This figure displays quite well the discrepancies. We see that sadly some of the interesting cases do not have data for all age classes.\n",
+    "We see that in most cantons the ratio is most different for the group 50+, followed by the group 25-49. The group 15-24 in general has the smallest ration - that means foreign and swiss workers in this group show similar unemployment rates.\n",
+    "But we note that for some rural areas, such as Uri, Nidwalden and Wallis young people have a higher ratio than their older groups. This could be due to the type of employment offered in these areas.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,7.5))\n",
+    "g = sns.barplot(y='value', \n",
+    "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
+    "                   x='Code',\n",
+    "                   data=barplot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finaly we decide to also show the distribution over all cantons using boxplots, which gives a better overview without looking at Cantons individualy."
    ]
   },
   {
@@ -840,8 +896,8 @@
     "collapsed": true
    },
    "source": [
-    "We see that the discrepancy between the foreigners and swiss nationals is largest for the age group 50 and above.\n",
-    "We note that while for swiss nationals, the youngest group is most unemployed followed by the two older groups being similarly , slightly less unemployed, for foreigners the elderly have a higher unemploment rate that the middleaged group."
+    "We again see that the discrepancy between the foreigners and swiss nationals is largest for the age group 50 and above.\n",
+    "We note that, while for swiss nationals, the youngest group is the most unemployed followed by the two older groups being similarly yet slightly more employed. For foreigners, the elderly have a higher unemployment rate than the middlea-ged group."
    ]
   },
   {
@@ -857,18 +913,10 @@
     "collapsed": true
    },
    "source": [
-    "The röstigraben, that is the cultural gap between german and french speaking switzerland is visible in our analysis.\n",
-    "We note that the french are more unemployed, but have a smaller gap between foreigners and swiss nationals."
+    "The röstigraben, which is the cultural gap between german and french speaking switzerland is visible in our analysis.\n",
+    "We note that the french are more unemployed, but have a smaller gap between foreigners and swiss nationals.\n",
+    "We estimate the difference in unemployment rates between the areas divided by the Röstigraben to be: #oth comment this"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
