Finished analysis ex02 and rosti

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -84,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro01.png')"
@@ -100,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro02.png')"
@@ -120,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "europe_unemployed.head()"
@@ -166,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "europe_unemployed.head()"
@@ -182,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "central_swiss_coord = [46.484, 8.1336] \n",
@@ -236,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat01.png')"
@@ -245,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat02.png')"
@@ -254,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat03.png', retina = True)"
@@ -263,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat04.png', retina = True)"
@@ -273,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we retrieve our data using an XLS file –there are more options available for XLS–, we still need to perform sanitizing steps before being able to draw our map:\n",
+    "Once we retrieve our data using an XLS file, we still need to perform sanitizing steps before being able to draw our map:\n",
     "- Deleting useless columns (and rows)\n",
     "- Getting rid of the Multiindex\n",
     "- Mapping each canton to its code (vital to draw our map)"
@@ -297,6 +315,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -311,20 +330,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where did you get that pikl from? should explain where to get how to get etc"
+    "In this part, we use a special dictionary defined in order to map each canton to its code. You can look at the [mapping](mapping.ipynb) in order to get more information on how we did that."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
     "swiss_unemployment.insert(1, 'Code', swiss_unemployment['Canton'].map(dico))\n",
     "swiss_unemployment.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to get meaningful results and to be able to compare both maps, we define a special scale that we can use on both maps. We choose to start with 0.2, the smallest value of unemployment in the 2nd map, and end with 4.2 and 5.2, the highest unemployment rates of each dataset we will study. The remaining scale becomes obvious to determine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scale = [0.2, 1.2, 2.2, 3.2, 4.2, 5.2]"
    ]
   },
   {
@@ -342,7 +380,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -351,7 +390,8 @@
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
     "             topojson = 'objects.cantons',\n",
-    "             fill_color='OrRd', fill_opacity=0.7, line_opacity=0.2,\n",
+    "             threshold_scale = scale,\n",
+    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
     "             legend_name='Percentage of unemployment (%)')\n",
     "swiss_unemployment_map"
    ]
@@ -360,7 +400,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analysis (en cours)"
+    "We can see very intereseting trends by looking at the map. We will not dwell on the (very apparent) Röstigraben, which we will tackle at the end of our homework. However, we can clearly see that the highest unemployment rates are found in urban french-speaking cantons (Geneva, Vaud, Neuchatel, Jura and Basel-City). We can also see a high rate in Zurich as it is a very urban city (leading to less employment)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When looking at the cantons with the least unemployment (< 2.2%), we can see 2 clear trends explaining this : their economy is largely based on agriculture and industry and they have a very small population (only Lucerne and Thurgau have over 200K inhabitants)."
    ]
   },
   {
@@ -382,20 +429,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "real_swiss_unemployment = swiss_unemployment\n",
     "del real_swiss_unemployment['Demandeurs d\\'emploi non chômeurs']\n",
-    "real_swiss_unemployment['Taux de chômage'] = (real_swiss_unemployment['Chômeurs inscrits'] / real_swiss_unemployment['Demandeurs d\\'emploi'])*real_swiss_unemployment['Taux de chômage']\n",
-    "#real_swiss_unemployment['Taux de chômage'] = pd.to_numeric(real_swiss_unemployment['Taux de chômage']).map('{:,.2f}'.format)\n",
+    "real_swiss_unemployment['Taux de chômage'] = (real_swiss_unemployment['Chômeurs inscrits']/ \n",
+    "                real_swiss_unemployment['Demandeurs d\\'emploi'])*real_swiss_unemployment['Taux de chômage']\n",
     "real_swiss_unemployment.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "real_swiss_unemployment_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
@@ -403,8 +454,9 @@
     "             columns=['Code', 'Taux de chômage'],\n",
     "             key_on='feature.id',\n",
     "             topojson = 'objects.cantons',\n",
-    "             fill_color='OrRd', fill_opacity=0.7, line_opacity=0.2,\n",
-    "             legend_name='Percentage of unemployment (%)')\n",
+    "             threshold_scale = scale,\n",
+    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
+    "             legend_name='Percentage of (real) unemployment (%)')\n",
     "real_swiss_unemployment_map"
    ]
   },
@@ -412,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analysis (en cours)"
+    "On top of seeing the same trends as the map above, we have a clear decline in the unemployment rates (all cantons' unemployment rate decreased by at least 1% on the map) where most of the rural german-speaking cantons have the lowest unemployment rate. This is once again very easily explained as people in more urban cantons are more prone to be interested in other jobs."
    ]
   },
   {
@@ -432,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'categories_q3.png', width='450px')"
@@ -448,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'age_selection.png')"
@@ -466,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'foreigners_1.png', width='450px')"
@@ -475,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'foreigners_2.png', width='450px')"
@@ -518,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.head()"
@@ -568,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.head()"
@@ -585,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
@@ -610,7 +676,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_map = folium.Map(location=[46.85, 8.23], zoom_start=8, tiles='cartodbpositron')\n",
@@ -646,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'find_folder.png', width='300px')"
@@ -655,7 +725,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'find_folder_2.png', width='300px')"
@@ -697,7 +769,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_unemployed_age.head() #what looks like 2 columns is 1 :S"
@@ -706,7 +780,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#renaming columns for convenience\n",
@@ -736,7 +812,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#yet to find good plot\n",
@@ -766,7 +844,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15,7.5))\n",
@@ -803,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#pivot df for easier manipulation\n",
@@ -817,7 +899,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#preform division\n",
@@ -851,7 +935,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(15,7.5))\n",
@@ -871,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "sns.boxplot(x='Nationalité', \n",
@@ -882,7 +970,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "sns.boxplot(hue='Nationalité', \n",
@@ -908,14 +998,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "swiss_unemployment_map"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "The röstigraben, which is the cultural gap between german and french speaking switzerland is visible in our analysis.\n",
-    "We note that the french are more unemployed, but have a smaller gap between foreigners and swiss nationals.\n",
-    "We estimate the difference in unemployment rates between the areas divided by the Röstigraben to be: #oth comment this"
+    "The Röstigraben, a cultural gap between german and french speaking Switzerland, is very visible in our analysis.\n",
+    "We note that the french-speaking part of Switzerland has more unemployment but has a smaller gap between foreigners and swiss nationals while the german-speaking trends are inversed.\n",
+    "We estimate the difference in unemployment rates between the areas divided by the Röstigraben to be around 2% when looking at the choropleth map."
    ]
   }
  ],
@@ -936,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
