Adding clear map

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -333,8 +333,8 @@
    },
    "outputs": [],
    "source": [
-    "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
-    "swiss_unemployment.insert(1, 'Code', swiss_unemployment['Canton'].map(dico))\n",
+    "dico = pkl.load(open('Data/map_cantons.pkl', 'rb')) \n",
+    "swiss_unemployment.insert(1, 'Code', swiss_unemployment['Canton'].map(dico)) #add 'Code' column\n",
     "swiss_unemployment.head()"
    ]
   },
@@ -371,7 +371,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -429,6 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cleaning the data\n",
     "real_swiss_unemployment = swiss_unemployment\n",
     "del real_swiss_unemployment['Demandeurs d\\'emploi non chômeurs']\n",
     "real_swiss_unemployment['Taux de chômage'] = (real_swiss_unemployment['Chômeurs inscrits']/ \n",
@@ -440,7 +441,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -614,7 +615,7 @@
    },
    "outputs": [],
    "source": [
-    "total = swiss_foreign_unemployed['Etrangers'] #+ swiss_foreign_unemployed['Suisses'] #this should be oths general data\n",
+    "total = swiss_foreign_unemployed['Etrangers'] + swiss_foreign_unemployed['Suisses']\n",
     "swiss_foreign_unemployed['Difference'] = (swiss_foreign_unemployed['Etrangers'] - swiss_foreign_unemployed['Suisses']) / total\n",
     "swiss_foreign_unemployed['Ratio'] = swiss_foreign_unemployed['Etrangers'] / swiss_foreign_unemployed['Suisses']"
    ]
@@ -642,7 +643,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -678,7 +679,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -809,15 +810,13 @@
    "outputs": [],
    "source": [
     "#adding plots one after the other for comparison\n",
-    "sns.factorplot(#col=\"Nationalité\", \n",
-    "                   y='Unemployment rate', \n",
+    "sns.factorplot(y='Unemployment rate', \n",
     "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
     "                   x='Code',\n",
     "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Etrangers'],\n",
     "                   kind=\"bar\",     \n",
     "                   palette=\"Blues\", size=3, aspect=3)\n",
-    "sns.factorplot(#col=\"Nationalité\", \n",
-    "                   y='Unemployment rate', \n",
+    "sns.factorplot(y='Unemployment rate', \n",
     "                   hue='Age class: 15-24, 25-49, 50 ans and up',\n",
     "                   x='Code',\n",
     "                   data=swiss_unemployed_age[swiss_unemployed_age['Nationalité'] == 'Suisses'],\n",
