Pushing first work + imports

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -8,7 +8,17 @@
    },
    "outputs": [],
    "source": [
-    "#imports"
+    "#imports (same as tuto ML)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from pandas.plotting import scatter_matrix\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -26,13 +36,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We preform a naive data analysis using plots."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import the data set\n",
+    "lalonde_df = pd.read_csv('lalonde.csv')\n",
+    "#give a first look\n",
+    "lalonde_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Looking at numbers**\n",
+    "\n",
+    "We use a simple summary to describe the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lalonde_df.groupby('treat')['re78'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We see that there are many less people in the treated group compared to the untreated group.\n",
+    "- The standard deviation for the treated group is much higher, there is more variety in the outcome\n",
+    "- The mean of the untreated group is higher\n",
+    "- but the max salary in the treated group is 3x higher!\n",
+    " - given that the 75% for the untreated group is much higher, this could indicate that the max for the treated group is an outlier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can visualize these numbers nicely with a boxplot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Looking at plots**\n",
+    "\n",
+    "we naively (like us at first) try to use a histogram we will see that taking into account that there are much less people in the treated group, both groups fare similarly.\n",
+    "\n",
+    "We note that we have a log-like distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define the two categories\n",
+    "treated_salary = lalonde_df[lalonde_df.treat ==1 ]['re78']\n",
+    "untreated_salary = lalonde_df[lalonde_df.treat == 0 ]['re78']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw the plots on top of each other with same bin size\n",
+    "bins = np.linspace(0, 60500, 30)\n",
+    "plt.hist(untreated_salary, bins, alpha=0.5, label='untreated')\n",
+    "plt.hist(treated_salary, bins, alpha=0.5, label='treated')\n",
+    "plt.legend(loc='upper right')"
+   ]
   },
   {
    "cell_type": "markdown",
