--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -14,6 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
     "from pandas.plotting import scatter_matrix\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -93,6 +94,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#define the two categories\n",
+    "treated_salary = lalonde_df[lalonde_df.treat ==1 ]['re78']\n",
+    "untreated_salary = lalonde_df[lalonde_df.treat == 0 ]['re78']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,17 +123,6 @@
     "we naively (like us at first) try to use a histogram we will see that taking into account that there are much less people in the treated group, both groups fare similarly.\n",
     "\n",
     "We note that we have a log-like distribution."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#define the two categories\n",
-    "treated_salary = lalonde_df[lalonde_df.treat ==1 ]['re78']\n",
-    "untreated_salary = lalonde_df[lalonde_df.treat == 0 ]['re78']"
    ]
   },
   {
@@ -240,11 +243,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test and training set are given already, need to choose how to get validation set. Remove as proposed by tutorial\n",
+    "newsgroups_train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
+    "newsgroups_test = fetch_20newsgroups(subset='test', remove=('headers', 'footers', 'quotes'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have the data as a list, transform it to a pandas DF. Not sure if needed though.\n",
+    "train_DF = pd.DataFrame(newsgroups_train.data)\n",
+    "test_DF = pd.DataFrame(newsgroups_test.data)\n",
+    "train_DF.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
