--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,22 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.preprocessing import OneHotEncoder # is this really needed ?\n",
     "from pandas.plotting import scatter_matrix\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -229,26 +234,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1."
+    "First, we need to compute the TF-IDF features of our dataset, using a vectorizer. As we understood the question, what was asked was not to use any of the given datasets from sklearn, but to use all of the data. Thus, we do not use the train and test subsets given to us in sklearn, but will create our own such subsets, adding a validation subset.\n",
+    "\n",
+    "Also note that we remove the headers, footers and quotes, as proposed in the <a href=\"http://scikit-learn.org/stable/datasets/twenty_newsgroups.html\">sklearn tutorial</a> of the dataset, as to have something more realistic and without any of the metadata. Note also that we did not use the *sklearn.datasets.fetch_20newsgroups_vectorized* function that returns the TF-IDF features directly, as it would defeat the purpose of the exercise."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the 20newsgroup dataset. It is, again, a classic dataset that can directly be loaded using sklearn ([link](http://scikit-learn.org/stable/datasets/twenty_newsgroups.html)).  \n",
+    "Exercise: Load the 20newsgroup dataset. It is, again, a classic dataset that can directly be loaded using sklearn ([link](http://scikit-learn.org/stable/datasets/twenty_newsgroups.html)).  \n",
     "[TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf), short for term frequency inverse document frequency, is of great help when if comes to compute textual features. Indeed, it gives more importance to terms that are more specific to the considered articles (TF) but reduces the importance of terms that are very frequent in the entire corpus (IDF). Compute TF-IDF features for every article using [TfidfVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html). Then, split your dataset into a training, a testing and a validation set (10% for validation and 10% for testing). Each observation should be paired with its corresponding label (the article category).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Test and training set are given already, need to choose how to get validation set. Remove as proposed by tutorial\n",
-    "newsgroups_train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
-    "newsgroups_test = fetch_20newsgroups(subset='test', remove=('headers', 'footers', 'quotes'))"
+    "# create the TF-IDF vectorizer\n",
+    "tfidf = TfidfVectorizer()"
    ]
   },
   {
@@ -257,10 +265,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We have the data as a list, transform it to a pandas DF. Not sure if needed though.\n",
-    "train_DF = pd.DataFrame(newsgroups_train.data)\n",
-    "test_DF = pd.DataFrame(newsgroups_test.data)\n",
-    "train_DF.head()"
+    "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
+    "newsgroups_all = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As asked in the question, beforei seperating in subsets, we will use the vectorizer on the compelte set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vectors is a sparse matrix\n",
+    "vectors = tfidf.fit_transform(newsgroups_all.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to seperate the dataset into three sets: train, test and validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newsgroup_data = np.array(newsgroups_all)  #convert array to numpy type array\n",
+    "\n",
+    "# first we seperate test and train. Random_state given to have a seed.\n",
+    "newsgroups_train, newsgroups_test = train_test_split(newsgroup_data, test_size=0.1, random_state=1)\n",
+    "\n",
+    "# then we seperate again to get validation from train\n",
+    "newsgroups_train, newsgroups_valid = train_test_split(newsgroups_train, test_size=0.1, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = MultinomialNB(alpha=.01)\n",
+    "clf.fit(vectors, newsgroups_train)"
    ]
   },
   {
