--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -33,13 +31,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. A naive analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We preform a naive data analysis using plots."
    ]
   },
@@ -53,6 +44,13 @@
     "lalonde_df = pd.read_csv('lalonde.csv')\n",
     "#give a first look\n",
     "lalonde_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. A naive analysis"
    ]
   },
   {
@@ -94,14 +92,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#define the two categories\n",
-    "treated_salary = lalonde_df[lalonde_df.treat ==1 ]['re78']\n",
-    "untreated_salary = lalonde_df[lalonde_df.treat == 0 ]['re78']"
+    "treat = lalonde_df.treat ==1 \n",
+    "untreat = lalonde_df.treat == 0\n",
+    "\n",
+    "treated_salary = lalonde_df[treat]['re78']\n",
+    "untreated_salary = lalonde_df[untreat]['re78']"
    ]
   },
   {
@@ -142,17 +141,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Conclusion**\n",
+    "\n",
+    "A naive researcher might conlcude that the treatment isn't effective, as the mean salary for the untreated population is higher, but for some individuals is is very effective, hence the outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. A closer look at the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We look more closely at the data, building a histogram for every column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#distinct id is useless\n",
+    "del lalonde_df['id']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for col in lalonde_df:\n",
+    "    print('Histogram and 5 number summary for column : ', col)\n",
+    "    print('\\n',lalonde_df.groupby('treat')[col].describe())\n",
+    "    plt.figure()\n",
+    "    bins = np.linspace(np.min(lalonde_df[col]),np.max(lalonde_df[col]), 30)\n",
+    "    plt.hist(lalonde_df[untreat][col], bins,alpha=0.5)\n",
+    "    plt.hist(lalonde_df[treat][col],bins, alpha=0.5)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we note different distribution in ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['age', 'educ', 're74', 're75', 're78']:\n",
+    "    plt.figure()\n",
+    "    plt.title(col)\n",
+    "    plt.boxplot([lalonde_df[untreat][col], lalonde_df[treat][col]], labels=['untreated', 'treated'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the last 3 diagrams, we see that the treated group is slowly catching up the difference in salary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also decide to look at the correlation between the variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(figsize=(10, 8))\n",
+    "corr = lalonde_df.corr()\n",
+    "sns.heatmap(corr, mask=np.zeros_like(corr, dtype=np.bool), cmap=sns.diverging_palette(220, 10, as_cmap=True),\n",
+    "            square=True, ax=ax)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,9 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -180,9 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -196,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -212,9 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -280,16 +351,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
