Changing valid and test

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -51,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the data set\n",
@@ -72,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lalonde_df.groupby('treat')['re78'].describe()"
@@ -112,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'])\n",
@@ -133,7 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#draw the plots on top of each other with same bin size\n",
@@ -262,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
@@ -279,7 +291,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -296,22 +310,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "newsgroup_data = np.array(newsgroups_all)  #convert array to numpy type array\n",
     "\n",
-    "# first we seperate test and train. Random_state given to have a seed.\n",
-    "newsgroups_train, newsgroups_test = train_test_split(newsgroup_data, test_size=0.1, random_state=1)\n",
+    "# first we seperate train from the rest. Random_state given to have a seed.\n",
+    "newsgroups_train, newsgroups_inter = train_test_split(newsgroup_data, test_size=0.2, random_state=1)\n",
     "\n",
-    "# then we seperate again to get validation from train\n",
-    "newsgroups_train, newsgroups_valid = train_test_split(newsgroups_train, test_size=0.1, random_state=1)"
+    "# then we seperate again to get validation and test seperately\n",
+    "newsgroups_test, newsgroups_valid = train_test_split(newsgroups_inter, test_size=0.1, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf = MultinomialNB(alpha=.01)\n",
